# studynote

./: README.md  environment.yml  财务报表分析学习笔记.md
abtest/: How Not To Run an A-B Test.md
kaggle/learn_kaggle_ml/: Machine_Learning_Micro-Course Home_Page.md  未命名.ipynb
kaggle/study_python/: Untitled.ipynb
kaggle/titanic/: eda_for_titainic.ipynb
mytools/: README.md  pivot_test.py  pyproject.toml  setup.cfg
mytools/.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  setup-checkpoint.cfg  本地打包流程-checkpoint.md
mytools/mytools/: __init__.py  dataeda.py  math_utils.py  mpyhive.py  string_utils.py
mytools/mytools.egg-info/: PKG-INFO  SOURCES.txt
mytools/mytools.egg-info/.ipynb_checkpoints/: SOURCES-checkpoint.txt
mytools/mytools/.ipynb_checkpoints/: __init__-checkpoint.py  mpyhive-checkpoint.py
python_data_tools/: Jpyter常用工具备忘.ipynb  Python入门.ipynb  pandas数据可视化.ipynb  test_for_pandas_mysql.ipynb
sklearn/.ipynb_checkpoints/: 未命名-checkpoint.ipynb
数学分析/: 微积分与数学分析引论.md
数据可视化python/: first_figure.html  for_plt.ipynb  seabron_for_heatmap.ipynb  seabron_normal.ipynb  未命名.ipynb
数据可视化python/.ipynb_checkpoints/: for_plt-checkpoint.ipynb  seabron_for_heatmap-checkpoint.ipynb  seabron_normal-checkpoint.ipynb
计量经济学导论学习/: 计量经济学导论学习笔记.md  附录二次函数图.gcx
计量经济学导论学习/.ipynb_checkpoints/: 第二章简单回归模型-checkpoint.md
计量经济学导论学习/code/: Untitled.ipynb  ceosal.csv  回归的三种示例.ipynb  多元归回分析-估计.ipynb  简单线性回归.ipynb  计量经济学wooldridge包使用.md
计量经济学导论学习/data/: ceosal.csv
计量经济学导论学习/图片/: 附录二次函数图.gcx
计量经济学导论学习/笔记/: 第一篇横截面数据的回归分析.md  (+2 more)
财务分析学习/: ~$未指明行业案例.xlsx  未指明行业案例.xlsx
(+16 files in other folders)
