[metadata]
name = mytools
version = 0.1.2
author = didiw
author_email = diffmaper@163.com
description = 常用自定义工具函数包 
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.6

[options]
# 声明包包含的模块（自动发现 mytools 目录下的所有模块）
packages = find:
# 若有依赖，在此添加（例如：install_requires = numpy>=1.19.0）
# install_requires =
